assets/css/articles-container.css
#top-articles-container {
  width: 100%;
  overflow-x: hidden;
}

.top-articles-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}
.top-articles-column {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 100%;
}
.top-article-item {
  width: 100%;
  margin: auto;
  position: relative;
  margin: auto;
}
.top-article-item img {
  width: 100%;
  display: block;
  position: relative;
}

.top-article-item-info {
  position: absolute;
  width: 100%;
  height: 100%;
  bottom: 0;
}
.top-article-item-title-1 {
  margin: auto;
  position: relative;
  top: 25.79%;
  width: 54.61%;
}
.top-article-item-title-2 {
  margin: auto;
  position: relative;
  top: 65.56%;
  width: 42.42%;
}
.top-article-item-title-3 {
  margin: auto;
  position: relative;
  top: 63.25%;
  width: 49.22%;
}
.top-article-item-title-4 {
  margin: auto;
  position: relative;
  top: 10.09%;
  width: 34.22%;
}

.top-article-item-title-5 {
  margin: auto;
  position: relative;
  top: 40.2%;
  width: 58.13%;
}
.top-article-item-title-6 {
  margin: auto;
  position: relative;
  top: 13.54%;
  width: 55.78%;
}
.top-article-item-title-7 {
  margin: auto;
  position: relative;
  top: 58.21%;
  width: 47.4%;
}
.top-article-item-title-8 {
  margin: auto;
  position: relative;
  top: 33%;
  width: 33.28%;
}
.top-article-item-title-9 {
  margin: auto;
  position: relative;
  top: 59.22%;
  width: 67.5%;
}

.top-article-item-title img {
  margin: auto;
}

.top-article-item-info-readmore {
  bottom: 0;
  padding-bottom: 24px;
  width: 100%;
  position: absolute;
  text-align: center;
  color: white;
}
.top-article-item-info-readmore img {
  margin: auto;
  width: 18.23%;
}
.top-article-item-info-lg-styler-text {
  font: normal normal normal 15px/18px Optima;
  letter-spacing: 0.6px;
  margin-bottom: 6px;
}
.top-article-item-info-readmore-text {
  font: normal normal bold 13px/15px Optima;
  text-decoration: underline;
  letter-spacing: 0.52px;
}

@media (min-width: 768px) {
  .top-articles-container {
    margin-top: 50px;
  }
  .top-articles-column {
    flex: 33%;
  }
}

